@@ -9,6 +9,7 @@ lintian-brush (0.71) UNRELEASED; urgency=medium
     Depends-Indep or Build-Depends-Arch.
   * When removing duplicate lines from a changelog, also drop any
     sections that may be left empty.
+  * Properly update changelog entries without trailer.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 09 Jun 2020 18:18:59 +0000
 
